--- a/index.html
+++ b/index.html
@@ -13,15 +13,9 @@
     </center>
 
 <center>
-<img src="C:\Users\Danielito\Pictures\Roblox\RobloxScreenShot20210626_231726021.png" width="700px" height="410px">
-<img src="C:\Users\Danielito\Desktop\Documentos Papa mama\Danielito\WEB\html\belen xd.png" width="700  px" alt="">
+<img src=RobloxScreenShot20210626_231726021.png" width="700px" height="410px">
+<img src="belen xd.png" width="700  px" alt="">
 </center>
-
-
-
-
-
-
 
 </font>
 </body>
