--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 </head>
 
-<body background="tenor.gif">
+<body background="tenor1.gif">
 
     <center>
     <h1 style="color: white;" id="titulo">Nya, ichi ni san, nya, arigato >///< </h1>
