--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <a href="estilos.css"></a>
     <link rel="shortcut icon" href="favicon.jpg">
 </head>
-<body>
-<body background="tenor1.gif" width=1920px height=1080px>
+    
 
+<body background="tenor1.gif" width=1920px height=1080px>
     <center>
     <h1 style="color: white;" id="titulo">Nya, ichi ni san, nya, arigato >///< </h1>
     </center>
 
 <center>
 <img src="RobloxScreenShot20210626_231726021.png" width="700px" height="410px">
-<img src="belen xd.png" width="700px  px" alt="">
+<img src="belen xd.png" width="700px" alt="">
 </center>
 
 </font>
