--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina web prueba</title>
     <font face="Dubai">
     <a href="estilos.css"></a>
@@ -22,3 +21,4 @@
 
 </font>
 </body>
+</html>
