--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="favicon.jpg">
 </head>
 
-<body background="tenor1.gif" width=1920px height=1080px>
+<body background="chayanne.jpg" width=1920px height=1080px>
 
     <center>
     <h1 style="color: white;" id="titulo">Nya, ichi ni san, nya, arigato >///< </h1>
