--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body background="chayanne.jpg" width=1920px height=1080px>
 
     <center>
-    <h1 style="color: black;" id="titulo">Nya, ichi ni san, nya, arigato >///< </h1>
+    <h1 " id="titulo">Nya, ichi ni san, nya, arigato >///< </h1>
     </center>
 
 <center>
