--- a/index.html
+++ b/index.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
     <title>pagina web prueba</title>
     <font face="Dubai">
     <a href="estilos.css"></a>
     <link rel="shortcut icon" href="favicon.jpg">
 </head>
 
-<body background="chayanne.jpg" width=1920px height=1080px>
+<body background="tenor1.gif" width=1920px height=1080px>
 
     <center>
-    <h1 " id="titulo">Nya, ichi ni san, nya, arigato >///< </h1>
+    <h1 style="color: white;" id="titulo">Nya, ichi ni san, nya, arigato >///< </h1>
     </center>
 
 <center>
-<img src="RobloxScreenShot20210626_231726021.png" width="700px" height="410px">
 <img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+<img src="belen xd.png" width="700px">
+
 </center>
 
 </font>
+
+
 </body>
 </html>
