--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <font face="Dubai">
     <a href="estilos.css"></a>
     <link rel="shortcut icon" href="favicon.jpg">
+    <meta name="robots" content="index">
+        <meta name="keywords" content="nya, ichi ni san, nya, arigato">
 </head>
 
 <body background="tenor1.gif" width=1920px height=1080px>
